--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "alight-motion-preset-backend",
+  "name": "alight-motion-backend",
   "version": "1.0.0",
-  "description": "Backend for the Alight Motion Preset store.",
+  "description": "Render-ready backend for Alight Motion Preset Store.",
   "main": "server.js",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node server.js"
   },
@@ -11,7 +14,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "lowdb": "^7.0.1",
+    "pg": "^8.11.3",
     "uuid": "^9.0.1"
   }
 }
